# MLViz

./: DataPool.py  EventHandler.py  LayoutManager.py  PlotManager.py  README.md  dashboard.py  handlers.py  layout.py  ml_tools.py  plot.py  pyproject.toml
arduino_firmware/: README.md.txt
arduino_firmware/write_to_serial/: write_to_serial.ino
data/: README.md  recording.csv
models/: five_gesture.none-fist-thumbsup-okay-peace.notch60.model
offline_ml_scripts/: convert_sequence_to_features.py  gradient_boost.py  linear_svm.py  mlp.py  naive_bayes.py  print_raw_data_statistics.py
offline_ml_scripts/processed/: five_gesture.none-fist-thumbsup-okay-peace.notch60.features
